--- a/packages/autorest.gotest/src/template/scenarioContent.go.njk
+++ b/packages/autorest.gotest/src/template/scenarioContent.go.njk
@@ -13,11 +13,11 @@ var err error
         {%- set _ = allVariables.push(clientVariable) %}
         {%- endif %}
     {%- endif %}
-    {%- for name, value in step.variablesOutput %}
+    {%- for name, variable in step.variablesOutput %}
     {%- if globalVariables.indexOf(name)>=0 %}
-    testsuite.{{name}} = {{value}}
+    testsuite.{{name}} = {{variable.value}}
     {%- else %}
-    {{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= {{value}}
+    {{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= {{variable.value}}
     {%- endif %}
     {%- endfor %}
     {%- if step.type == "restCall" %}		
