Fix minor problem in testgen for api scenario generation (#861)
* fix: remove redundant go fmt

* fix: wrong pointer return for lro

* fix: wrong parse for map key value with variable

* test: update test for fix

* fix: example group and example file name

* build: pump to @autorest/gotest_v4.2.1

* test: update interation test snapshot

--- a/packages/autorest.gotest/src/template/scenarioContent.go.njk
+++ b/packages/autorest.gotest/src/template/scenarioContent.go.njk
@@ -35,7 +35,7 @@ var err error
             {%- if example.isLRO %}
             {%- if example.checkResponse %}
             {%- if allVariables.indexOf(resVariable)<0 %}
-            var {{resVariable}} {{packageName}}.{{example.operationGroup.language.go.clientName}}{{example.operation.language.go.name}}Response
+            var {{resVariable}} *{{packageName}}.{{example.operationGroup.language.go.clientName}}{{example.operation.language.go.name}}Response
             {%- set _ = allVariables.push(resVariable) %}
             {%- endif %}
             {%- endif %}
