--- a/packages/autorest.gotest/src/template/sampleContent.go.njk
+++ b/packages/autorest.gotest/src/template/sampleContent.go.njk
@@ -3,6 +3,9 @@
 {%- set firstDeploymentOutput = true %}
 {%- for step in steps %}
     // From step {{step.step}}
+{%- if step.type == "restCall" and step.exampleModel == undefined %}
+    // Unsupported step
+{%- else %}
     {%- if step.type == "restCall" %}
         {%- set example = step.exampleModel %}
         {%- set clientVariable = jsFunc.uncapitalize(example.operationGroup.language.go.clientName) %}
@@ -15,7 +18,11 @@
         {%- endif %}
     {%- endif %}
     {%- for name, variable in step.variablesOutput %}
-    {{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= {{variable.value}}
+        {%- if variable.type === "prefix-string" %}
+    {{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= generateAlphaNumericID({{variable.value}}, 6)
+	    {%- else %}
+	{{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= {{variable.value}}
+	    {%- endif %}
     {%- endfor %}
     {%- if step.type == "restCall" %}		
         {%- if example.checkResponse %}
@@ -111,4 +118,5 @@
     {%- if not loop.last %}
 
     {% endif %}
-    {%- endfor %}
+{%- endif %}
+{%- endfor %}
