--- a/packages/autorest.gotest/src/template/scenarioContent.go.njk
+++ b/packages/autorest.gotest/src/template/scenarioContent.go.njk
@@ -4,6 +4,9 @@
 var err error
 {%- for step in steps %}
     // From step {{step.step}}
+{%- if step.type == "restCall" and step.exampleModel == undefined %}
+    // Unsupported step
+{%- else %}
     {%- if step.type == "restCall" %}
         {%- set example = step.exampleModel %}
         {%- set clientVariable = jsFunc.uncapitalize(example.operationGroup.language.go.clientName) %}
@@ -15,9 +18,17 @@ var err error
     {%- endif %}
     {%- for name, variable in step.variablesOutput %}
     {%- if globalVariables.indexOf(name)>=0 %}
+        {%- if variable.type === "prefix-string" %}
+    testsuite.{{name}} = testutil.GenerateAlphaNumericID(testsuite.T(), {{variable.value}}, 6)
+        {%- else %}
     testsuite.{{name}} = {{variable.value}}
+        {%- endif %}
     {%- else %}
+        {%- if variable.type === "prefix-string" %}
+    {{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= testutil.GenerateAlphaNumericID(testsuite.T(), {{variable.value}}, 6)
+        {%- else %}
     {{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= {{variable.value}}
+        {%- endif %}
     {%- endif %}
     {%- endfor %}
     {%- if step.type == "restCall" %}		
@@ -109,4 +120,5 @@ var err error
     {%- if not loop.last %}
 
     {% endif %}
-    {%- endfor %}
+{%- endif %}
+{%- endfor %}
