--- a/packages/autorest.gotest/src/template/sampleContent.go.njk
+++ b/packages/autorest.gotest/src/template/sampleContent.go.njk
@@ -3,6 +3,9 @@
 {%- set firstDeploymentOutput = true %}
 {%- for step in steps %}
     // From step {{step.step}}
+{%- if step.type == "restCall" and step.exampleModel == undefined %}
+    // Unsupported step
+{%- else %}
     {%- if step.type == "restCall" %}
         {%- set example = step.exampleModel %}
         {%- set clientVariable = jsFunc.uncapitalize(example.operationGroup.language.go.clientName) %}
@@ -15,9 +18,13 @@
         {%- endif %}
     {%- endif %}
     {%- for name, variable in step.variablesOutput %}
+        {%- if variable.type === "prefix-string" %}
+    {{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= generateAlphaNumericID({{variable.value}}, 6)
+        {%- else %}
     {{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= {{variable.value}}
+        {%- endif %}
     {%- endfor %}
-    {%- if step.type == "restCall" %}		
+    {%- if step.type == "restCall" %}        
         {%- if example.checkResponse %}
             {%- set resVariable = jsFunc.genVariableName(example.returnInfo[0]) %}
         {%- endif %}
@@ -93,12 +100,12 @@
         {%- endfor %}
     }
     deployment {%- if firstDeployment %}:{%- set firstDeployment = false %}{%- endif %}= armresources.Deployment{
-		Properties: &armresources.DeploymentProperties{
-			Template:   template,
-			Parameters: params,
-			Mode:       to.Ptr(armresources.DeploymentModeIncremental),
-		},
-	}
+        Properties: &armresources.DeploymentProperties{
+            Template:   template,
+            Parameters: params,
+            Mode:       to.Ptr(armresources.DeploymentModeIncremental),
+        },
+    }
     {%- if step.armTemplatePayload.outputs %}
     deploymentExtend {%- if firstDeploymentOutput %}:{%- set firstDeploymentOutput = false %}{%- endif %}= createDeployment("{{step.step}}", &deployment)
     {%- for k,v in step.armTemplatePayload.outputs %}
@@ -111,4 +118,5 @@
     {%- if not loop.last %}
 
     {% endif %}
-    {%- endfor %}
+{%- endif %}
+{%- endfor %}
