--- a/packages/autorest.gotest/src/template/scenarioContent.go.njk
+++ b/packages/autorest.gotest/src/template/scenarioContent.go.njk
@@ -4,6 +4,9 @@
 var err error
 {%- for step in steps %}
     // From step {{step.step}}
+{%- if step.type == "restCall" and step.exampleModel == undefined %}
+    // Unsupported step
+{%- else %}
     {%- if step.type == "restCall" %}
         {%- set example = step.exampleModel %}
         {%- set clientVariable = jsFunc.uncapitalize(example.operationGroup.language.go.clientName) %}
@@ -15,12 +18,20 @@ var err error
     {%- endif %}
     {%- for name, variable in step.variablesOutput %}
     {%- if globalVariables.indexOf(name)>=0 %}
+        {%- if variable.type === "prefix-string" %}
+    testsuite.{{name}} = testutil.GenerateAlphaNumericID(testsuite.T(), {{variable.value}}, 6)
+        {%- else %}
     testsuite.{{name}} = {{variable.value}}
+        {%- endif %}
     {%- else %}
+        {%- if variable.type === "prefix-string" %}
+    {{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= testutil.GenerateAlphaNumericID(testsuite.T(), {{variable.value}}, 6)
+        {%- else %}
     {{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= {{variable.value}}
+        {%- endif %}
     {%- endif %}
     {%- endfor %}
-    {%- if step.type == "restCall" %}		
+    {%- if step.type == "restCall" %}        
         {%- if example.checkResponse %}
             {%- set resVariable = jsFunc.genVariableName(example.returnInfo[0]) %}
         {%- endif %}
@@ -89,12 +100,12 @@ var err error
         {%- endfor %}
     }
     deployment {%- if firstDeployment %}:{%- set firstDeployment = false %}{%- endif %}= armresources.Deployment{
-		Properties: &armresources.DeploymentProperties{
-			Template:   template,
-			Parameters: params,
-			Mode:       to.Ptr(armresources.DeploymentModeIncremental),
-		},
-	}
+        Properties: &armresources.DeploymentProperties{
+            Template:   template,
+            Parameters: params,
+            Mode:       to.Ptr(armresources.DeploymentModeIncremental),
+        },
+    }
     {%- if step.armTemplatePayload.outputs %}
     deploymentExtend, err {%- if firstDeploymentOutput %}:{%- set firstDeploymentOutput = false %}{%- endif %}= testutil.CreateDeployment(testsuite.ctx, testsuite.subscriptionId, testsuite.cred, testsuite.options, testsuite.resourceGroupName, "{{step.step}}", &deployment)
     testsuite.Require().NoError(err)
@@ -109,4 +120,5 @@ var err error
     {%- if not loop.last %}
 
     {% endif %}
-    {%- endfor %}
+{%- endif %}
+{%- endfor %}
