--- a/packages/autorest.gotest/src/template/exampleTest.go.njk
+++ b/packages/autorest.gotest/src/template/exampleTest.go.njk
@@ -53,10 +53,9 @@ func Example{{example.operationGroup.language.go.clientName}}_{{example.opName}}
             log.Fatalf("failed to advance page: %v", err)
         }
         for _, v := range page.{{example.pageableItemName}} {
-            // TODO: use page
             _ = v
         }
-        // If HTTP returns as the '200' response defined in example definition, page struct should like: 
+        // If the HTTP response code is 200 as defined in example definition, your page structure would look like this. Please pay attention that all the values in the output are fake values for just demo purposes.
         // page{% if not example.responseIsDiscriminator %}.{{example.responseType}}{% endif %} = {{jsFunc.getCommentResponseOutput(example.responseOutput)}}
     }
     {%- else %}
@@ -69,17 +68,15 @@ func Example{{example.operationGroup.language.go.clientName}}_{{example.opName}}
             log.Fatalf("failed to advance page: %v", err)
         }
         for _, v := range page.{{example.pageableItemName}} {
-            // TODO: use page
             _ = v
         }
-        // If HTTP returns as the '200' response defined in example definition, page struct should like: 
+        // If the HTTP response code is 200 as defined in example definition, your page structure would look like this. Please pay attention that all the values in the output are fake values for just demo purposes.
         // page{% if not example.responseIsDiscriminator %}.{{example.responseType}}{% endif %} = {{jsFunc.getCommentResponseOutput(example.responseOutput)}}
     }
     {%- endif %}
     {%- if example.checkResponse and not example.isPageable%}
-    // TODO: use response
     _ = res
-    // If HTTP returns as the '200' response defined in example definition, response struct should like: 
+    // If the HTTP response code is 200 as defined in example definition, your response structure would look like this. Please pay attention that all the values in the output are fake values for just demo purposes.
     // res{% if not example.responseIsDiscriminator %}.{{example.responseType}}{% endif %} = {{jsFunc.getCommentResponseOutput(example.responseOutput)}}
     {%- endif %}
 }
