update comment description

--- a/packages/autorest.gotest/src/template/exampleTest.go.njk
+++ b/packages/autorest.gotest/src/template/exampleTest.go.njk
@@ -53,9 +53,10 @@ func Example{{example.operationGroup.language.go.clientName}}_{{example.opName}}
             log.Fatalf("failed to advance page: %v", err)
         }
         for _, v := range page.{{example.pageableItemName}} {
+            // You could use page here. We use blank identifier for just demo purposes.
             _ = v
         }
-        // If the HTTP response code is 200 as defined in example definition, your page structure would look like this. Please pay attention that all the values in the output are fake values for just demo purposes.
+        // If the HTTP response code is 200 as defined in example definition, your page structure would look as follows. Please pay attention that all the values in the output are fake values for just demo purposes.
         // page{% if not example.responseIsDiscriminator %}.{{example.responseType}}{% endif %} = {{jsFunc.getCommentResponseOutput(example.responseOutput)}}
     }
     {%- else %}
@@ -68,15 +69,17 @@ func Example{{example.operationGroup.language.go.clientName}}_{{example.opName}}
             log.Fatalf("failed to advance page: %v", err)
         }
         for _, v := range page.{{example.pageableItemName}} {
+            // You could use page here. We use blank identifier for just demo purposes.
             _ = v
         }
-        // If the HTTP response code is 200 as defined in example definition, your page structure would look like this. Please pay attention that all the values in the output are fake values for just demo purposes.
+        // If the HTTP response code is 200 as defined in example definition, your page structure would look as follows. Please pay attention that all the values in the output are fake values for just demo purposes.
         // page{% if not example.responseIsDiscriminator %}.{{example.responseType}}{% endif %} = {{jsFunc.getCommentResponseOutput(example.responseOutput)}}
     }
     {%- endif %}
     {%- if example.checkResponse and not example.isPageable%}
+    // You could use response here. We use blank identifier for just demo purposes.
     _ = res
-    // If the HTTP response code is 200 as defined in example definition, your response structure would look like this. Please pay attention that all the values in the output are fake values for just demo purposes.
+    // If the HTTP response code is 200 as defined in example definition, your response structure would look as follows. Please pay attention that all the values in the output are fake values for just demo purposes.
     // res{% if not example.responseIsDiscriminator %}.{{example.responseType}}{% endif %} = {{jsFunc.getCommentResponseOutput(example.responseOutput)}}
     {%- endif %}
 }
