--- a/packages/autorest.gotest/src/template/exampleTest.go.njk
+++ b/packages/autorest.gotest/src/template/exampleTest.go.njk
@@ -2,6 +2,7 @@
 // +build go1.18
 
 {{copyright}}
+// DO NOT EDIT.
 
 package {{packageName}}_test
 
@@ -18,7 +19,7 @@ import (
 {%- for example in exampleGroup.examples %}
 {%- if allExamples.indexOf(example.originalFile)<0 %}
 {%- set _ = allExamples.push(example.originalFile) %}
-// Generated from example definition: https://github.com/Azure/azure-rest-api-specs/tree/main/{{example.originalFile}}
+// Generated from example definition: https://github.com/Azure/azure-rest-api-specs/blob/{{swaggerCommit}}/{{example.originalFile}}
 func Example{{example.operationGroup.language.go.clientName}}_{{example.opName}}{% if exampleGroup.examples.length>1 %}_{{jsFunc.getExampleSuffix(example.name)}}{% endif %}() {
     cred, err := azidentity.NewDefaultAzureCredential(nil)
     if err != nil {
@@ -47,33 +48,39 @@ func Example{{example.operationGroup.language.go.clientName}}_{{example.opName}}
     {%- elif  (example.returnInfo.length == 1) and (example.isPageable) %}
     pager := client.{{example.opName}}({{jsFunc.getParamsValue(example.methodParametersOutput)}})
     for pager.More() {
-        nextResult, err := pager.NextPage(ctx)
+        page, err := pager.NextPage(ctx)
         if err != nil {
             log.Fatalf("failed to advance page: %v", err)
         }
-        for _, v := range nextResult.{{example.pageableItemName}} {
-            // TODO: use page item
+        for _, v := range page.{{example.pageableItemName}} {
+            // You could use page here. We use blank identifier for just demo purposes.
             _ = v
         }
+        // If the HTTP response code is 200 as defined in example definition, your page structure would look as follows. Please pay attention that all the values in the output are fake values for just demo purposes.
+        // page{% if not example.responseIsDiscriminator %}.{{example.responseType}}{% endif %} = {{jsFunc.getCommentResponseOutput(example.responseOutput)}}
     }
     {%- else %}
     client.{{example.opName}}({{jsFunc.getParamsValue(example.methodParametersOutput)}})
     {%- endif %}
     {%- if example.isLRO and example.isPageable and example.checkResponse %}
     for res.More() {
-        nextResult, err := res.NextPage(ctx)
+        page, err := res.NextPage(ctx)
         if err != nil {
             log.Fatalf("failed to advance page: %v", err)
         }
-        for _, v := range nextResult.{{example.pageableItemName}} {
-            // TODO: use page item
+        for _, v := range page.{{example.pageableItemName}} {
+            // You could use page here. We use blank identifier for just demo purposes.
             _ = v
         }
+        // If the HTTP response code is 200 as defined in example definition, your page structure would look as follows. Please pay attention that all the values in the output are fake values for just demo purposes.
+        // page{% if not example.responseIsDiscriminator %}.{{example.responseType}}{% endif %} = {{jsFunc.getCommentResponseOutput(example.responseOutput)}}
     }
     {%- endif %}
     {%- if example.checkResponse and not example.isPageable%}
-    // TODO: use response item
+    // You could use response here. We use blank identifier for just demo purposes.
     _ = res
+    // If the HTTP response code is 200 as defined in example definition, your response structure would look as follows. Please pay attention that all the values in the output are fake values for just demo purposes.
+    // res{% if not example.responseIsDiscriminator %}.{{example.responseType}}{% endif %} = {{jsFunc.getCommentResponseOutput(example.responseOutput)}}
     {%- endif %}
 }
 {%- endif %}
