--- a/packages/autorest.gotest/src/template/scenarioTest.go.njk
+++ b/packages/autorest.gotest/src/template/scenarioTest.go.njk
@@ -7,6 +7,7 @@ package {{packageName}}_test
 
 import (
     "context"
+    "fmt"
     "testing"
 
     "github.com/Azure/azure-sdk-for-go/sdk/azcore"
